--- a/tarlisted.1
+++ b/tarlisted.1
@@ -1,44 +1,75 @@
+.\" Hey, EMACS: -*- nroff -*-
+.\"	Copyright (c) 2006 Tomi Ollila
+.\"	    All rights reserved
+.\"
+.\" Redistribution and use in source and binary forms, with or without
+.\" modification, are permitted provided that the following conditions
+.\" are met:
+.\"
+.\"   1. Redistributions of source code must retain the above copyright
+.\"      notice, this list of conditions and the following disclaimer.
+.\"   2. Redistributions in binary form must reproduce the above copyright
+.\"      notice, this list of conditions and the following disclaimer in
+.\"      the documentation and/or other materials provided with the
+.\"      distribution.
+.\"   4. The names of the authors may not be used to endorse or promote
+.\"      products derived from this software without specific prior
+.\"      written permission.
 
-NAME
+.TH tarlisted 1 "May 13, 2006"
 
-  tarlisted
+.SH NAME
+tarlisted \- Create tar archive based on description list contents
 
+.SH SYNOPSIS
+.B tarlisted 
+.I [-nVh] [-i infile] [-o outfile] [| ppcmd [args]]
+.br
 
-SYNOPSIS
+.SH DESCRIPTION
 
-  tarlisted [-mVh] [-i infile] [-o outfile]
+\fBTarlisted\fP takes lines of text as an input and creates tar archive
+based on that information.  
 
+Each line contains permission, user, group and pathname that are to
+be written in header part of the tar entry. In addition to that, at
+the end of line the syntax varies depending the file type archived.
+For example in case of reqular files the filename where file content
+is read is added. Tarlisted creates POSIX.1-1998 tar file format 
+(only) and can archive all the (seven) file types it supports.
 
-DESCRIPTION
+.SH OPTIONS
 
-  Tarlisted takes lines of text as an input and creates tar archive
-  based on that information. 
+.B -\fIn\fP
+Just check tarlist contents, not doing anything else.
+.TP
+.B -\fIV\fP:
+Verbose output.
+.TP
+.B -\fIi\fP and -\fIo\fP: 
+defines input and output files, instead of stdin/stdout.
+.TP
+.B -\fIh\fP: 
+help
+.TP
+.B \fI| ppcmd [args]\fP
+Internal piping to postprocess command. Output will be processed
+through this program before writing to output. Also, if postprocess
+command returns nonzero value, tarlisted will exit with value 1.
+.PP 
+The default mode is to act as a filter; take description file from
+stdin and write to stdout. This used to be the most common usage;
+some script provides the content and output is filtered, either to
+gzip/bzip2 or to tar command to be extract elsewhere (even to inside
+chroot...). This still holds when piping to tar for extraction (preferably
+using internal piping support), but when (internally) piping to gzip/bzip2
+the -\fIo\fP is usually used. So not making -o mandatory (and with -
+output to stdout) is there for historical reasons.
 
-  Each line contains permission, user, group and pathname that are to
-  be written in header part of the tar entry. In addition to that, at
-  the end of line the syntax varies depending the file type archived.
-  For example in case of reqular files the filename where file content
-  is read is added. Tarlisted creates POSIX.1-1998 tar file format 
-  (only) and can archive all the (seven) file types it supports.
+.SH SYNTAX
 
-
-OPTIONS
-
-   -n: Just check tarlist contents, not doing anything else.
-   -V: Verbose output.
-   -i and -o: defines input and output files, instead of stdin/stdout.
-   -h: help
-
-  The default mode is to act as a filter; take description file from
-  stdin and write to stdout. This is the most common usage; some script
-  provides the content and output is filtered, either to gzip/bzip2 or
-  to tar command to be extract elsewhere (even to inside chroot...).
-
-
-SYNTAX
-
-  Files and directories to be archived are read from input file,
-  each line in one of the formats:
+Files and directories to be archived are read from input file,
+each line in one of the formats:
 
     <perm> <uname> <gname> . <tarfilename> <sysfilename>
     <perm> <uname> <gname> . <tarfilename> /
@@ -49,35 +80,35 @@ SYNTAX
     <perm> <uname> <gname> . <tarfilename> // fifo
 
   Where:
-        perm:         file permission in octal number format.
-        uname:        name of the user this file is owned.
-        gname:        name of the group this file belongs.
-        .:            future extension for time...
-        tarfilename:  name of the file that is written to the tar archive.
+     perm:         file permission in octal number format.
+     uname:        name of the user this file is owned.
+     gname:        name of the group this file belongs.
+     .:            future extension for time...
+     tarfilename:  name of the file that is written to the tar archive.
 
-        sysfilename:  file to be added from filesystem.
-        /:            add directory to the tar archive.
-        ->:           add tarfilename as symbolic link to given name.
-        =>:           add tarfilename as hard link to given name.
-        // c ...:     add character device to the tar archive.
-        // b ...:     add block device to the tar archive.
-        // fifo:      add fifo (named pipe) file to the tar archive.
+     sysfilename:  file to be added from filesystem.
+     /:            add directory to the tar archive.
+     ->:           add tarfilename as symbolic link to given name.
+     =>:           add tarfilename as hard link to given name.
+     // c ...:     add character device to the tar archive.
+     // b ...:     add block device to the tar archive.
+     // fifo:      add fifo (named pipe) file to the tar archive.
 
-  Backspace "\" must be used when adding [back]spaces to filenames.
-  Pipeline output to gzip/bzip2 (| gzip -c > outfile.tar.gz) for compression.
+Backspace "\\" must be used when adding [back]spaces to filenames.
 
-  Input file may also have lines
+Input file may also have lines
+
     tarlisted file format 2
     tarlisted file end
-  The first one can be used to request strict format check. The second
-  is added for symmetry.
 
-  Output format is POSIX Unix Standard TAR (ustar, IEEE Std 1003.1-1988)
+The first one can be used to request strict format check. The second
+is added for symmetry.
 
+Output format is POSIX Unix Standard TAR (ustar, IEEE Std 1003.1-1988)
 
-EXAMPLES
+.SH EXAMPLES
 
-  First, just one that shows all supported file types.
+First, just one that shows all supported file types.
 
   $ ./tarlisted -o test.tar << EOF
   tarlisted file format 2
@@ -91,7 +122,7 @@ EXAMPLES
   tarlisted file end
   EOF
 
-  The above created test.tar with content: 
+The above created test.tar with content: 
 
   $ tar tvf test.tar
   -rwxr-xr-x root/root  12453 2006-04-25 00:41:48 usr/bin/tarlisted
@@ -102,7 +133,7 @@ EXAMPLES
   brw-r----- root/disk    7,0 2006-04-25 00:42:53 dev/loop0
   prw------- root/root      0 2006-04-25 00:42:53 dev/initctl
 
-  Another to install perl4 (compiled from 4.0.36) (using installed tarlisted).
+Another to install perl4 (compiled from 4.0.36) (using installed tarlisted).
 
   $ PREFIX=/usr
   $ tarlisted << EOF | tar -C $PREFIX -xvf -
@@ -118,46 +149,50 @@ EXAMPLES
    644 root root . $PREFIX/man/man1/perl4.1 src/perl.man
   EOF
 
+Finally, compress on the fly with bzip2
 
-  Finally, compress on the fly with bzip2
+  $ echo 755 root root . /usr/bin/tarlisted tarlisted \\
+    | ./tarlisted -o tl.tar.bz2 '|' bzip -c
 
-  $ echo 755 root root . /usr/bin/tarlisted tarlisted | ./tarlisted \
-       | bzip2 -c > tl.tgz
+.SH CAVEAT
 
+Remember to escape | from shell when using the internal pipeline
+feature of tarlisted. There are three ways to enter that on the
+command line: '|', "|" and \\|.
 
-CAVEATS
+.SH TODO
 
-  When using tarlisted in a pipeline before some other command and its
-  execution fails for some reason, the return code of tarlisted is
-  usually lost. When using bash, the failure can be caught by using
-  the command:
-    set -eo pipefail
+Add features from latest POSIX tar spesifications to 
+support long filenames when necessary. \" option -x to enable
 
+Plan and implement "modification time" setting.
 
-AUTHOR
-  written by Tomi Ollila
+.SH AUTHOR
+written by Tomi Ollila
 
+.SH COPYRIGHT
 
-COPYRIGHT
-
-  Redistribution and use in source and binary forms, with or without
-  modification, are permitted provided that the following conditions
-  are met:
+ Redistribution and use in source and binary forms, with or without
+ modification, are permitted provided that the following conditions
+ are met:
  
-    1. Redistributions of source code must retain the above copyright
-       notice, this list of conditions and the following disclaimer.
-    2. Redistributions in binary form must reproduce the above copyright
-       notice, this list of conditions and the following disclaimer in
-       the documentation and/or other materials provided with the
-       distribution.
-    4. The names of the authors may not be used to endorse or promote
-       products derived from this software without specific prior
-       written permission.
+ 1. Redistributions of source code must retain the above copyright
+    notice, this list of conditions and the following disclaimer.
+ 2. Redistributions in binary form must reproduce the above copyright
+    notice, this list of conditions and the following disclaimer in
+    the documentation and/or other materials provided with the
+    distribution.
+ 4. The names of the authors may not be used to endorse or promote
+    products derived from this software without specific prior
+    written permission.
  
-  THIS SOFTWARE IS PROVIDED ``AS IS'' AND WITHOUT ANY EXPRESS OR
-  IMPLIED WARRANTIES, INCLUDING, WITHOUT LIMITATION, THE IMPLIED
-  WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE.
+ THIS SOFTWARE IS PROVIDED ``AS IS'' AND WITHOUT ANY EXPRESS OR
+ IMPLIED WARRANTIES, INCLUDING, WITHOUT LIMITATION, THE IMPLIED
+ WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE.
    
 
-SEE ALSO
-  tar(1), star(1) tar(5)
+.SH SEE ALSO
+.PD O
+\fBtar\fP(1),
+\fBstar\fP(1),
+\fBtar\fP(5)
